// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not return list of expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-message"
    >
      <p>
        No Expenses
      </p>
    </div>
  </div>
</div>
`;

exports[`should return list of expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Component
      amount={25000}
      createdAt={-345600000}
      description="rent"
      id="1"
      key="1"
    />
    <Component
      amount={250}
      createdAt={345600000}
      description="Gum"
      id="2"
      key="2"
    />
    <Component
      amount={4000}
      createdAt={0}
      description="Credit card"
      id="3"
      key="3"
    />
  </div>
</div>
`;
